--- a/project.config.json
+++ b/project.config.json
@@ -1,5 +1,5 @@
 {
-  "appid": "wx67bb986dae28b572",
+  "appid": "*****",
   "compileType": "miniprogram",
   "libVersion": "3.7.11",
   "packOptions": {
